--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*{
+.font-1{
     font-family: 'Montserrat', sans-serif;
 }
 #profile-img{
@@ -9,6 +9,15 @@
 }
 #top-greetings {
     padding-top: 120px;
+}
+#page-title {
+    padding-top: 100px;
+}
+#home-page, #about-me-page, #projects-page, #me-img {
+    height: 100vh;
+}
+#me-img, #profile-img {
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6); /* Adjust the opacity as needed */
 }
 /* Media query for mobile screens */
 @media screen and (max-width: 767px) {
@@ -39,7 +48,7 @@
 /* CSS FOR BACKGROUND */
 #gradient-background {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(
       45deg,
       #7BD3EA,
@@ -55,7 +64,7 @@
     content: "";
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image: linear-gradient(
         90deg,
         rgba(255, 255, 255, 0.1) 1px,
@@ -65,4 +74,17 @@
     background-size: 20px 20px;
     pointer-events: none; /* Allow clicking through the pattern layer */
   }
-  /* CSS for the typing animation */
+  /* CSS for carousel */
+
+.gallery-container {
+    width: 100%;
+    overflow: hidden;
+}
+.gallery {
+    display: flex;
+    animation-timing-function: linear;
+}
+.gallery-item {
+    flex: 0 0 100px; /* Adjust the width as needed */
+    margin-right: 20px; /* Adjust the spacing between images */
+}
