--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,19 @@
 .font-1{
     font-family: 'Montserrat', sans-serif;
 }
+.font-2 {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+.font-4 {
+    font-family: "Protest Riot", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+* {
+    font-family: "Annapurna SIL", serif;
+    font-weight: 400;
+    font-style: normal;
+}
 #profile-img{
     height: 30vh;
 }
@@ -17,7 +30,10 @@
     height: 100vh;
 }
 #me-img, #profile-img {
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6); /* Adjust the opacity as needed */
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
+}
+.shadow-me {
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
 }
 /* Media query for mobile screens */
 @media screen and (max-width: 767px) {
@@ -39,6 +55,28 @@
     }
     .contact-icon {
         font-size: 40px!important;
+    }
+    #page-title{
+        padding-top: 20px;
+        text-align: center!important;
+    }
+    #page-title-col {
+        margin-left: 0!important;
+    }
+    #home-page{
+        height: 100vh;
+    }
+    #about-me-page, #projects-page, #me-img {
+        height: 100%;
+    }
+    .icon-wrapper {
+        padding-top: 50px;
+    }
+    .description-wrapper {
+        margin-top: 20px;
+    }
+    .add-margin {
+        margin-left: 10px;
     }
 }
 .d-inline-flex {
