--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@
         margin-left: 10px;
     }
     .align-me {
-        text-align: center!important;
+        text-align: justify!important;
     }
 }
 .d-inline-flex {
