Added new column, height adjusted

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 #page-title {
     padding-top: 100px;
 }
-#home-page, #about-me-page, #projects-page, #me-img {
+#home-page, #about-me-page, #me-img {
     height: 100vh;
 }
 #me-img, #profile-img {
